Migrate users of URL constructors
This is mostly a straightforward migration, though it shows that invalid
URLs are caught earlier.

Change-Id: I44103ce066f17a5f5c1df439dd8b41a63790dd1d
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>